# gencbor

./: .gitignore  LICENSE  MANIFEST.in  README.md  gencbor.py  pyproject.toml  setup.cfg
test/: appendix_a.json.url  fail.json.url  test_gencbor.py
