[metadata]
name = gencbor
version = 0.1.0
author = Steffen Kieß
author_email = kiess@ki4.de
description = A simple generic CBOR encoder / decoder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/steffen-kiess/gencbor
project_urls =
    Bug Tracker = https://github.com/steffen-kiess/gencbor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = gencbor
packages =
python_requires = >=3.8
